Fixing light mode and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,6 +13,33 @@
   --sl-text-h1: 40px;
   --sl-text-h2: 24px;
   --sl-text-h3: 32px;
+/* Dark mode colors. */
+	--sl-color-accent-low: #241b47;
+	--sl-color-accent: #6e3ae8;
+	--sl-color-accent-high: #c6c1fa;
+	--sl-color-white: #ffffff;
+	--sl-color-gray-1: #eceef2;
+	--sl-color-gray-2: #c0c2c7;
+	--sl-color-gray-3: #888b96;
+	--sl-color-gray-4: #545861;
+	--sl-color-gray-5: #353841;
+	--sl-color-gray-6: #24272f;
+	--sl-color-black: #17181c;
+}
+/* Light mode colors. */
+:root[data-theme='light'] {
+	--sl-color-accent-low: #d5d1fd;
+	--sl-color-accent: #703cea;
+	--sl-color-accent-high: #33216a;
+	--sl-color-white: #212229;
+	--sl-color-gray-1: #24272f;
+	--sl-color-gray-2: #4B4E5C;
+	--sl-color-gray-3: #545861;
+	--sl-color-gray-4: #888b96;
+	--sl-color-gray-5: #c0c2c7;
+	--sl-color-gray-6: #eceef2;
+	--sl-color-gray-7: #f5f6f8;
+	--sl-color-black: #ffffff;
 }
 
 body {
@@ -20,23 +47,19 @@ body {
   font-size: 18px;
   font-weight:normal;
   line-height: 1.5;
-  color: var(--gray-neutral-600);
   letter-spacing: -0.025%;
 }
 
 h1 {
   font-weight: 600;
-  color: var(--gray-neutral-800);
 }
 
 h2 {
   font-weight:600;
-  color: var(--gray-neutral-800);
 }
 
 h3 {
   font-weight: 600;
-  color: var(--gray-neutral-800);
 }
 
 .service-box {
